K8s/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: acme.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-clusterip-srv
                port:
                  number: 80
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: api-clusterip-srv
                port:
                  number: 80
